# language-javascript

./: .gitignore  .travis.yml  ANNOUNCE  ChangeLog.md  Makefile  README  README.md  TODO.txt  build.sh  buildall.sh  cabal.project  ecmascript3.txt  ecmascript5.txt  language-javascript.cabal  quickcheck.hs  runalex.sh  runtests.hs  testsuite.hs
Tests/: ExpressionParser.hs  Lexer.hs  LiteralParser.hs  Minify.hs  ProgramParser.hs  RoundTrip.hs  StatementParser.hs
app/: Main.hs
samples/: 1.fjs  1.js  run.js
src-dev/Language/JavaScript/Parser/: Lexer.x
src/Language/JavaScript/: Parser.hs
src/Language/JavaScript/Parser/: AST.hs  Grammar.y  Grammar5.y  Grammar7.hs  Grammar7.y  Lexer.hs  Lexer.x  LexerUtils.hs  ParseError.hs  Parser.hs  Parser.y  ParserMonad.hs  ParserUtils.hs  SAST.hs  SrcLocation.hs  StringEscape.hs  Token.hs  Traversals.hs
src/Language/JavaScript/Parser/Parser/: Lexer.x  Parser.y
src/Language/JavaScript/Pretty/: Pr.hs  Printer.hs
src/Language/JavaScript/Process/: Minify.hs
src/Language/JavaScript/Transform/: Basic.hs
src/Typechecker/: Typechecker.hs
test/: testsuite.hs
test/Test/Language/Javascript/: DeclarationParser.hs  ExpressionParser.hs  Lexer.hs  LiteralParser.hs  Minify.hs  ModuleParser.hs  ProgramParser.hs  RoundTrip.hs  StatementParser.hs
unicode/: combiningmark.sh  connector-punctuation.sh  digit.sh  doit.sh  list-cm.txt  list-nd.txt  list-pc.txt  list.hs  list.txt
