Name:                language-javascript
Version:             0.5.14.3
Synopsis:            Parser for JavaScript
Description:         Parses Javascript into an Abstract Syntax Tree (AST).  Initially intended as frontend to hjsmin.
                     .
                     Note: Version 0.5.0 breaks compatibility with prior versions, the AST has been reworked to allow
                     round trip processing of JavaScript.
Homepage:            https://github.com/erikd/language-javascript
License:             BSD3
License-file:        LICENSE
Author:              Alan Zimmerman
Maintainer:          Erik de Castro Lopo <erikd@mega-nerd.com>
Copyright:           (c) 2010-2015 Alan Zimmerman, 2015 Erik de Castro Lopo
Category:            Language
Build-type:          Simple
homepage:            http://github.com/erikd/language-javascript
bug-reports:         http://github.com/erikd/language-javascript/issues
Extra-source-files:  README.md
                     .ghci
                     buildall.sh
                     test/Unicode.js
                     test/k.js
                     test/unicode.txt
                     -- runalex.sh
                     src/Language/JavaScript/Parser/Lexer.x

-- Version requirement upped for test support in later Cabal
Cabal-version:   >= 1.9.2


Library
  Build-depends:     base             >= 4       && < 5
                   , array            >= 0.3
                   , mtl              >= 1.1
                   , containers       >= 0.2
                   -- For the round trip output
                   , blaze-builder    >= 0.2
                   , bytestring       >= 0.9.1
                   , utf8-string      >= 0.3.7 && < 2
  if impl(ghc >= 7.10)
    build-tools:       happy >= 1.19, alex >= 3.1.4
  else
    if impl(ghc >= 7.8)
      build-tools:       happy >= 1.19, alex >= 3.1
    else
      build-tools:       happy >= 1.18.5, alex >= 3.0.5
  hs-source-dirs: src
  Exposed-modules:     Language.JavaScript.Parser
                       Language.JavaScript.Parser.Parser
                       Language.JavaScript.Parser.Lexer
                       Language.JavaScript.Parser.Grammar5
                       Language.JavaScript.Parser.AST
                       Language.JavaScript.Pretty.Printer
                       Language.JavaScript.Parser.SrcLocation
  Other-modules:       Language.JavaScript.Parser.LexerUtils
                       Language.JavaScript.Parser.ParseError
                       Language.JavaScript.Parser.ParserMonad
                       Language.JavaScript.Parser.StringEscape
                       Language.JavaScript.Parser.Token
  ghc-options:         -Wall

Test-Suite testsuite
  Type: exitcode-stdio-1.0
  Main-is: testsuite.hs
  build-depends: base
                 , array                    >= 0.3
                 , blaze-builder            >= 0.2
                 , bytestring               >= 0.9.1
                 , Cabal                    >= 1.9.2
                 , containers               >= 0.2
                 , QuickCheck               >= 2
                 , HUnit                    >= 1.2
                 , language-javascript      >= 0.5.14
                 , mtl                      >= 1.1
                 , test-framework-hunit
                 , test-framework
                 , utf8-light               >= 0.4
                 , utf8-string              >= 0.3.7 && < 2


source-repository head
  type:     git
  location: https://github.com/erikd/language-javascript.git
